--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
       <% end %>
     </div>
     
-    <% if params[:controller] == "listas" || params[:action] == "relatorio" || params[:action] == "show"%>
+    <% if params[:controller] == "listas" || params[:action] == "relatorio" || params[:action] == "show" || params[:action] == "registro"%>
       <a class="btn btn-default noPrint" style="position: absolute; right: 0px; margin-right: 10px" href="#" onclick="window.print();return false;">Imprimir Página</a>
     <% end %>
     
