Alterações finais - log

--- a/app/views/pages/registro.html.erb
+++ b/app/views/pages/registro.html.erb
@@ -1,8 +1,8 @@
 <div class="justPrint" style="text-align: center;"><%= image_tag("LogoPrefeitura.jpg", alt: "Prefeitura de São Paulo") %></div>
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <h1 style="text-align: center; margin-bottom: 25px;">Registro de Alterações</h1>
+      <h1 style="text-align: center; margin-bottom: 25px;">Log de Alterações</h1>
     </div>
   </div>
     <div class="tabela">
@@ -48,13 +48,4 @@
         </tbody>
       </table>
     </div>
-  
-  
-  
-  
-  
-  
-  
-  
-  
 </div>
