--- a/app/views/pages/relatorio.html.erb
+++ b/app/views/pages/relatorio.html.erb
@@ -38,6 +38,10 @@
               <td class="dir"><%= @licenca_medica %></td>
             </tr>
             <tr>
+              <td class="esq">Licença Médica - Prévia</td>
+              <td class="dir"><%= @licenca_medica_previa %></td>
+            </tr>
+            <tr>
               <td class="esq">Processo Administrativo de Falta</td>
               <td class="dir"><%= @falta %></td>
             </tr>
@@ -106,6 +110,10 @@
             <tr>
               <th class="esq">Licença Médica</th>
               <td>-<%= @licenca_medica %></td>
+            </tr>
+            <tr>
+              <th class="esq">Licença Médica - Prévia</th>
+              <td>-<%= @licenca_medica_previa %></td>
             </tr>
             <tr class="back">
               <th style="color: black;">Total de Motoristas Efetivos</th>
