--- a/app/views/pages/listar_motoristas.html.erb
+++ b/app/views/pages/listar_motoristas.html.erb
@@ -10,7 +10,7 @@
       <%= link_to "Vila Mariana", vila_mariana_path, class: "btn btn-block btn-primary btn-list"  %>  
     </div>
     <div class="col-md-2">
-      <%= link_to "Licença Médica", licenca_medica_path, class: "btn btn-block btn-primary btn-list"  %>    
+      <%= link_to "Licença Médica", licenca_medica_indice_path, class: "btn btn-block btn-primary btn-list"  %>    
     </div>
     <div class="col-md-2">
       <%= link_to "Processo<br />Administrativo<br />de Falta".html_safe, falta_path, class: "btn btn-block btn-primary btn-list btn-pad1"  %>    
