--- a/app/views/pages/registro.html.erb
+++ b/app/views/pages/registro.html.erb
@@ -2,7 +2,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1 style="text-align: center; margin-bottom: 25px;">Log de Alterações</h1>
+      <h1 style="text-align: center; margin-bottom: 25px;">Log de Alterações - <%= Time.now.strftime("%d/%m/%Y") %></h1>
     </div>
   </div>
     <div class="tabela">
