--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <% if logged_in? %>
       <ul class="nav navbar-nav navbar-left">
         <li style="font-weight: bold;">
-          <%= link_to "S I K O N", root_url, :style => "color: white;" %>
+          <div><%= image_tag("Sikon.png", height: '42.6', width: '142', alt: "Sikon - Sistema de Controle de Motoristas") %></div>
         </li>
         <li style="color: #999; margin-left: 40px;">
           <%= current_user.nome %> - <%= current_user.tipo %>
