--- a/app/views/motoristas/show.html.erb
+++ b/app/views/motoristas/show.html.erb
@@ -107,7 +107,7 @@
         </div>
         <div class="modal-body">
           <% @motorista.atestados.each do |a| %>
-            <%= link_to "Atestado enviado em #{a.created_at.strftime("%d/%m/%Y")}", a.picture.url, :target => '_blank', class: "btn btn-default", style:"margin: 5px;" %>
+            <%= link_to "Atestado enviado em #{a.created_at.strftime("%d/%m/%Y")} por #{a.user}", a.picture.url, :target => '_blank', class: "btn btn-default", style:"margin: 5px;" %>
             <% if current_user.tipo == "Administrador" %>
               <%= link_to "", a, method: :delete, data: { confirm: "Tem certeza que deseja deletar este atestado?" }, class: "glyphicon glyphicon-trash btn btn-default", style:"margin: 5px 5px 5px 0px; position: static" %>
             <% end %>
@@ -133,7 +133,7 @@
         </div>
         <div class="modal-body">
           <% @motorista.multas.each do |m| %>
-            <%= link_to "Multa enviada em #{m.created_at.strftime("%d/%m/%Y")}", m.picture.url, :target => '_blank', class: "btn btn-default", style:"margin: 5px;" %>
+            <%= link_to "Multa enviada em #{m.created_at.strftime("%d/%m/%Y")} por #{a.user}", m.picture.url, :target => '_blank', class: "btn btn-default", style:"margin: 5px;" %>
             <% if current_user.tipo == "Administrador" %>
               <%= link_to "", m, method: :delete, data: { confirm: "Tem certeza que deseja deletar esta multa?" }, class: "glyphicon glyphicon-trash btn btn-default", style:"margin: 5px 5px 5px 0px; position: static" %>
             <% end %>
