Update header without login

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
       </ul>
     <% else %>
       <ul class="nav navbar-nav navbar-left">
-        <li style="font-weight: bold;"><a href"#" style="color: white;">S I K O N</a></li>
+        <div><%=link_to image_tag("Sikon.png", height: '42.6', width: '142', alt: "Sikon - Sistema de Controle de Motoristas"), root_url %></div>
       </ul>
     <% end %>
   </div>
